--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack/webpack.config.babel.js --content-base build/ --colors --hot --inline --history-api-fallback --open",
-    "build": "NODE_ENV=production webpack --config webpack/webpack.prod.config.babel.js --progress --profile --colors",
+    "build": "SET 'NODE_ENV=development' && webpack --config webpack/webpack.prod.config.babel.js --progress --profile --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
